<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskCreationActivity">

    <Button
        android:id="@+id/createTaskBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/createTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/timeButton"
        app:layout_constraintStart_toStartOf="@+id/timeButton"
        app:layout_constraintTop_toBottomOf="@+id/timeButton" />

    <EditText
        android:id="@+id/taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/taskName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/taskDescription"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/taskName"
        app:layout_constraintStart_toStartOf="@+id/taskName"
        app:layout_constraintTop_toBottomOf="@+id/taskName" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="setTime"
        android:text="@string/timePicker"
        app:layout_constraintEnd_toEndOf="@+id/taskDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/taskDescription"
        app:layout_constraintTop_toBottomOf="@+id/durationPicker" />

    <NumberPicker
        android:id="@+id/durationPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>